# mdformat-tight-lists

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
mdformat_tight_lists/: __init__.py
tests/: fixtures.md  pre-commit-test.md  test_fixtures.py
